--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,9 +15,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen">
-        <activity android:name=".PageLogo">
-
-        </activity>
+        <activity android:name=".PageLogo" />
         <activity android:name=".LoginActivity" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
@@ -33,11 +31,17 @@
 
         <activity
             android:name=".ScreenSlideActivity"
-            android:label="@string/title_activity_screen_slide">  <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
+            android:label="@string/title_activity_screen_slide">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter></activity>
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".ProfilWelcome"
+            android:label="@string/title_activity_profil_welcome" />
+        <activity android:name=".CreateProfilActivity"></activity>
     </application>
 
 </manifest>
