--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,8 +15,16 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen">
-        <activity android:name=".PageLogo" />
+        <activity android:name=".PageLogo">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+            />
+        </activity>
         <activity android:name=".LoginActivity" />
+
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -31,17 +39,15 @@
 
         <activity
             android:name=".ScreenSlideActivity"
-            android:label="@string/title_activity_screen_slide">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            android:label="@string/title_activity_screen_slide" />
         <activity
             android:name=".ProfilWelcome"
             android:label="@string/title_activity_profil_welcome" />
-        <activity android:name=".CreateProfilActivity"></activity>
+        <activity android:name=".CreateProfilActivity" />
+        <activity
+            android:name=".SignUpActivity"
+            android:label="@string/title_activity_sign_up" />
+        <activity android:name=".ResetPasswordActivity"></activity>
     </application>
 
 </manifest>
