--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,8 @@ android {
         applicationId "com.example.mathieu.meetus"
         minSdkVersion 15
         targetSdkVersion 25
+        renderscriptTargetApi 19
+        renderscriptSupportModeEnabled true
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -31,9 +33,8 @@ dependencies {
     compile 'com.google.android.gms:play-services:10.2.1'
     compile 'com.android.support:support-v13:25.3.0'
     compile 'com.android.support:design:25.3.0'
-    compile 'com.roughike:bottom-bar:2.1.2'
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+
 }
 
 
