--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,6 +9,10 @@ android {
         targetSdkVersion 25
         renderscriptTargetApi 19
         renderscriptSupportModeEnabled true
+
+        renderscriptTargetApi 18
+        renderscriptSupportModeEnabled true
+
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -34,8 +38,10 @@ dependencies {
     compile 'com.google.android.gms:play-services:10.2.1'
     compile 'com.android.support:support-v13:25.3.0'
     compile 'com.android.support:design:25.3.0'
+    compile 'com.google.firebase:firebase-database:10.0.1'
     testCompile 'junit:junit:4.12'
 }
+
 
 
 
