--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     compile 'com.google.firebase:firebase-auth:10.2.1'
     compile 'com.google.android.gms:play-services:10.2.1'
     compile 'com.android.support:support-v13:25.3.0'
+    compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.android.support:design:25.3.0'
     compile 'com.google.firebase:firebase-database:10.0.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
