--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,8 @@ dependencies {
     compile 'com.google.firebase:firebase-auth:10.2.1'
     compile 'com.google.android.gms:play-services:10.2.1'
     compile 'com.android.support:support-v13:25.3.0'
+    compile 'com.google.firebase:firebase-storage:10.2.1'
+    compile 'com.firebaseui:firebase-ui-storage:0.6.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.android.support:design:25.3.0'
     compile 'com.google.firebase:firebase-database:10.0.1'
